--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="https://bootswatch.com/5/cyborg/bootstrap.min.css">
+    <script src="https://kit.fontawesome.com/294aa2c591.js" crossorigin="anonymous"></script>
     <title>React App</title>
     <link rel="stylesheet" href="">
   </head>
@@ -12,5 +13,6 @@
     
     <div id="root"></div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://kit.fontawesome.com/294aa2c591.js" crossorigin="anonymous"></script>
   </body>
 </html>
